# MLOps_End-to-End_Project

projeto-v1/: Dockerfile  Dockerfile.api  README.md  corrigir_runs.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  xgb_model.json
projeto-v1/conf/: logging.yml
projeto-v1/conf/base/: catalog.yml  parameters.yml  parameters_basic_pre_processing.yml  parameters_data_cleaning.yml  parameters_data_drift.yml  parameters_feature_engineering.yml  parameters_feature_selection.yml  parameters_grid.yml  parameters_model_development_selection.yml  parameters_model_predict.yml  parameters_model_selection.yml  parameters_model_train.yml  parameters_split_data.yml
projeto-v1/conf/docker/: mlflow.yml  parameters_model_selection.yml
projeto-v1/docs/source/: conf.py  index.rst
projeto-v1/gx/: great_expectations.yml
projeto-v1/gx/expectations/: .ge_store_backend_id  bank_suite.json  profiling_suite.json
projeto-v1/ml_artifacts/161624556360028386/e23adf71ae344832b2b6584facde7e01/artifacts/: estimator.html
projeto-v1/ml_artifacts/249113161301429161/228b6c7eddfe49d2b36c89aec6901c82/artifacts/: estimator.html
projeto-v1/ml_artifacts/249113161301429161/39dc6d2291614f11b5c6252375d8c732/artifacts/: estimator.html
projeto-v1/ml_artifacts/249113161301429161/7db131052b2b4f2fa777c94d31792560/artifacts/: estimator.html
projeto-v1/ml_artifacts/249113161301429161/c1d0b874291940bc9a9475ad535096ce/artifacts/: estimator.html
projeto-v1/ml_artifacts/282198899233688900/2c021729c7e043b4b0649bb5996b7ec6/artifacts/: cv_results.csv  estimator.html
projeto-v1/ml_artifacts/282198899233688900/97f179d56aa1438eb2a3c20aac27d313/artifacts/: estimator.html
projeto-v1/ml_artifacts/3032921d952c474888b59cc56d58938e/artifacts/model/: MLmodel  python_env.yaml
projeto-v1/ml_artifacts/431728372702771911/2a6fb5e475d0450fa7e68445df7f14cc/artifacts/: estimator.html
projeto-v1/ml_artifacts/431728372702771911/4a52f4c141ec4b51b04efcc0511675ab/artifacts/: feature_importance_weight.json
projeto-v1/notebooks/: feat_eng_tests.ipynb  feat_selec.ipynb
projeto-v1/src/projeto_v1/: __init__.py  __main__.py  pipeline_registry.py  settings.py
projeto-v1/src/projeto_v1/gx/: great_expectations.yml
projeto-v1/tests/: test_run.py
projeto-v1/tests/pipelines/: test_data_cleaning.py  test_data_expectations.py  test_ingestion.py
projeto-v1/tests/pipelines/basic_pre_processing/: test_pipeline.py
projeto-v1/tests/pipelines/data_cleaning/: test_nodes.py  test_pipeline.py
projeto-v1/tests/pipelines/data_drift/: test_pipeline.py
projeto-v1/tests/pipelines/data_expectations/: test_pipeline.py
projeto-v1/tests/pipelines/feature_engineering/: test_pipeline.py
projeto-v1/tests/pipelines/feature_selection/: test_pipeline.py
projeto-v1/tests/pipelines/feature_store/: test_pipeline.py
projeto-v1/tests/pipelines/ingestion/: test_pipeline.py
projeto-v1/tests/pipelines/model_development_selection/: test_pipeline.py
projeto-v1/tests/pipelines/model_predict/: test_pipeline.py
projeto-v1/tests/pipelines/model_train/: test_pipeline.py
projeto-v1/tests/pipelines/split_data/: test_pipeline.py
(+624 files in other folders)
