[project]
name = "mlops-project"
version = "0.1.0"
description = "Telemarketing ML pipeline with MLOps stack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka==2.9.0",
    "evidently==0.6.6",
    "expectations==1.0.1",
    "great==0.2.0",
    "great-expectations==0.18.12",
    "hopsworks==4.2.6",
    "ipykernel==6.29.5",
    "kaleido==0.2.0",
    "kedro==0.19.12",
    "kedro-mlflow==0.14.4",
    "kedro-viz==11.0.1",
    "mlflow==2.21.0",
    "nannyml==0.13.0",
    "openai==1.70.0",
    "optuna==4.2.1",
    "pip>=25.0.1",
    "prefect==2.20.17",
    "pyspark==3.5.5",
    "shap==0.47.1",
    "streamlit==1.44.1",
    "ucimlrepo==0.0.7",
    "vadersentiment==3.3.2",
    "ydata-profiling==4.16.1",
    "boruta==0.4.3",
    "pandas==2.1.4",
    "scikit-learn==1.6.1",
    "xgboost==2.1.4",
    "numpy==1.26.4"
]

[tool.kedro]
package_name = "projeto_v1"
project_name = "Projeto V1"
kedro_init_version = "0.19.12"
tools = ["Linting", "Testing", "Custom Logging", "Documentation", "Data Structure"]
example_pipeline = false
source_dir = "src"

[tool.kedro_telemetry]
project_id = "02e1ae2dab5f413db5f7859f5e66e4b5"
